<resources>

    <string name="app_name">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_name">User Name</string>
   	<string name="email">Email</string>
   	<string name="password">Password</string>
   	<string name="show_pass">Show Password</string>
   	<string name="rembr_pass">Remember Password</string>
   	<string name="forgot_pass">Forgot Password</string>
   	<string name="login_text">ENTER ACCOUNT INFORMATION</string>
   	<string name="login">Login</string>
   	<string name="register">Register</string>
   	<string name="signup_text">Havn\'t got an account yet ?</string>
   	<string name="signup">SignUp</string>
   	<string name="cancel">Cancel</string>
   	<string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

</resources>