<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical" 
    android:background="@drawable/bg5">

       
    <LinearLayout 
       android:id="@+id/layout_login_texts"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_margin="@dimen/margin_medium"
       android:layout_below="@+id/imgLogo"
       >

        
   <ImageView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/user_group"
       android:layout_margin="@dimen/margin_medium"
       android:id="@+id/imgLogo"
       android:layout_gravity="right"
        />
        
    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:padding="@dimen/padding_medium"
        android:background="@drawable/rouunded"
       />
    
    <!-- <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/> -->
    
    <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:hint="@string/password"
        android:background="@drawable/rouunded"
        android:inputType="textPassword"/>
    </LinearLayout>
    
    
    
    <!-- End Layout of Checkboxes  -->
     <LinearLayout 
       android:id="@+id/layout_login_checkboxes"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:gravity="left"
       android:layout_centerHorizontal="true"
       android:layout_margin="@dimen/margin_medium"
       android:layout_below="@+id/layout_login_texts"
        >
     
    <CheckBox 
        android:id="@+id/chkShowPass"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_pass"
        android:textSize="12dip"
        android:button="@drawable/checkbox_selector"
        android:textColor="@color/black"
        />
    
    <CheckBox 
        android:id="@+id/chkRemmbrPass"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rembr_pass"
        android:textSize="12dip"
        android:button="@drawable/checkbox_selector"
        android:textColor="@color/black"
        />
    
    <!-- <TextView 
	    android:id="@+id/txtForgotPass"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:layout_alignParentBottom="true"
        android:textColor="@color/blue"
        android:autoLink="none"
        /> -->
    
	</LinearLayout>
	<!-- End Layout of Checkboxes  -->
	
	<!-- Layout of Horizontal aligned Login Buttons  -->
    <LinearLayout 
       android:id="@+id/layout_login_buttons"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_alignParentBottom="true"
       android:gravity="center_horizontal"
       android:weightSum="1"
       android:layout_margin="@dimen/margin_medium"
        >
        
      <Button 
       android:id="@+id/btnCancel"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/cancel"
       android:layout_weight="0.3"
       android:background="@drawable/login_selector"
       />
    
     <Button 
       android:id="@+id/btnLogin"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/login" 
       android:layout_weight="0.3"
       android:background="@drawable/login_selector"
       />
     
     <Button 
       android:id="@+id/btnRegister"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/register" 
       android:layout_weight="0.3"
       android:background="@drawable/login_selector"
       />
        
    </LinearLayout>
    <!-- End Layout of Horizontal aligned Login Buttons  -->
	
</RelativeLayout>
